updating through vscode

--- a/main/index_movie.html
+++ b/main/index_movie.html
@@ -860,6 +860,30 @@
                                                   </swiper-slide>
                                         </swiper-container>
                               </div>
+
+                              <div class="endbar">
+                                        <div class="endbar-socialmedia-icons">
+                                                  <img src="/Images/Project_Logo-removebg-preview.png" alt="">
+                                                  <abbr title="Discord">
+                                                            <i class="fa-brands fa-discord border "></i>
+                                                  </abbr>
+                                                  <abbr title="IMDB">
+                                                            <i class="fa-brands fa-imdb"></i>
+                                                  </abbr>
+                                                  <abbr title="Telegram">
+                                                            <i class="fa-brands fa-telegram"></i></i>
+                                                  </abbr>
+                                                  <abbr title="Instagram">
+                                                            <i class="fa-brands fa-instagram"></i>
+                                                  </abbr>
+                                                  <abbr title="Facebook">
+                                                            <i class="fa-brands fa-facebook"></i>
+                                                  </abbr>
+                                        </div>
+                                        <div class="endbar-copyright">
+                                                  <i class="fa-regular fa-copyright"></i>aahuniverse.com
+                                        </div>
+                              </div>
                     </div>
 
 
