updating through vscode

--- a/main/index_series.html
+++ b/main/index_series.html
@@ -112,7 +112,7 @@
                                                                                 </p>
                                                                       </h3>
                                                             </div>
-                                                            <button class="featured-button">WATCH
+                                                            <button class="featured-button" onclick="vampire_diaries()">WATCH
                                                                       <i class="bi bi-play-btn"></i>
                                                             </button>
                                                   </div>
