--- a/main/index_movie.html
+++ b/main/index_movie.html
@@ -17,7 +17,7 @@
           <div class="navbar">
                     <div class="navbar-container">
                               <div>
-                                        <img class="navbar-logo" src="/Images/Project_Logo-removebg-preview.png" alt="">
+                                        <img class="navbar-logo" src="/main/Images/Project_Logo-removebg-preview.png" alt="">
                               </div>
                               <!-- <div class="logo-container">
                                         <h1 class="logo" onclick="homepage()">AAH Universe</h1>
@@ -36,8 +36,7 @@
                                                   <li class="menu-list-item" onclick="animepage()">Anime
                                                             <!-- <a href="/main/index_anime.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item" onclick="popularpage()">Popular</li>
-                                                  <li class="menu-list-item" onclick="trendpage()">Trends</li>
+                                                  
 
                                         </ul>
                               </div>
@@ -45,25 +44,25 @@
                                         <i class="fa-solid fa-magnifying-glass"></i>
                                         <input type="text" placeholder="Search..." id="search_input">
                                         <div class="search">
-                                                  <!-- <a href="" class="card">
+                                                  <a href="" class="card">
                                                             <img src="/content-images/Movies/After-We-Fell.jpg" alt="">
                                                             <div class="cont">
                                                                       <h3>The Boys</h3>
                                                                       <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
                                                             </div>
-                                                  </a> -->
-                                                  <!-- <a href="" class="card">
+                                                  </a>
+                                                  <a href="" class="card">
                                                             <img src="/content-images/Movies/After-We-Fell.jpg" alt="">
                                                             <div class="cont">
                                                                       <h3>The Boys</h3>
                                                                       <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
                                                             </div>
-                                                  </a> -->
+                                                  </a>
 
                                         </div>
                               </div>
                               <div class="profile-container">
-                                        <img class="profile-picture" alt="" src="/Images/profile-image.png">
+                                        <img class="profile-picture" alt="" src="/main/Images/profile-image.png">
                                         <div class="profile-text-container">
                                                   <span class="profile-text">Profile</span>
                                                   <i class="fa-regular fa-circle-down"></i>
@@ -503,7 +502,7 @@
                                                                       </div>
                                                                       <!-- <p class="movie-list-item-desc"></p> -->
                                                                       <button
-                                                                                class="movie-list-item-button">WATCH</button>
+                                                                                class="movie-list-item-button" onclick="badboysrideordie()">WATCH</button>
                                                             </div>
 
                                                   </swiper-slide>
