--- a/Login/registration.html
+++ b/Login/registration.html
@@ -25,7 +25,7 @@
             <input type="submit" value="Login">
             <div class="links">
                 <a href="/Login/Forgett.html">Forgot Password?</a>
-                <a href="/registration/sf.html">SingUp</a>
+                <a href="/registration/sf.html">SignUp</a>
             </div>
             
 
