--- a/main/Video_playback/movies/bad_boys_ride_or_die.html
+++ b/main/Video_playback/movies/bad_boys_ride_or_die.html
@@ -18,7 +18,7 @@
           <div class="navbar">
                     <div class="navbar-container">
                               <div>
-                                        <img class="navbar-logo" src="/Images/Project_Logo-removebg-preview.png" alt="">
+                                        <img class="navbar-logo" src="/main/Images/Project_Logo-removebg-preview.png" alt="">
                               </div>
                               <!-- <div class="logo-container">
                                         <h1 class="logo" onclick="homepage()">AAH Universe</h1>
@@ -37,9 +37,7 @@
                                                   <li class="menu-list-item" onclick="animepage()">Anime
                                                             <!-- <a href="/main/index_anime.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item" onclick="popularpage()">Popular</li>
-                                                  <li class="menu-list-item" onclick="trendpage()">Trends</li>
-
+                                                 
                                         </ul>
                               </div>
                               <div class="search_user">
@@ -64,7 +62,7 @@
                                         </div>
                               </div>
                               <div class="profile-container">
-                                        <img class="profile-picture" alt="" src="/Images/profile-image.png">
+                                        <img class="profile-picture" alt="" src="/main/Images/profile-image.png">
                                         <div class="profile-text-container">
                                                   <span class="profile-text">Profile</span>
                                                   <i class="fa-regular fa-circle-down"></i>
@@ -114,7 +112,9 @@
                                         <div class="movie-details">
                                                   <h5 id="gen">Action | Adventure | Comedy</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i
+                                                            <span>
+                                                                      <a href="https://www.imdb.com/title/tt4919268/">IMDB</a>
+                                                            </span><i
                                                                       class="bi bi-star-fill"></i>7
                                                             / 10
                                                             </p>
@@ -252,7 +252,7 @@
 
           <div class="endbar">
                     <div class="endbar-socialmedia-icons">
-                              <img src="/Images/Project_Logo-removebg-preview.png" alt="">
+                              <img src="/main/Images/Project_Logo-removebg-preview.png" alt="">
                               <abbr title="Discord">
                                         <i class="fa-brands fa-discord border "></i>
                               </abbr>
