--- a/main/Video_playback/movies/code-8_part-2.html
+++ b/main/Video_playback/movies/code-8_part-2.html
@@ -19,7 +19,7 @@
           <div class="navbar">
                     <div class="navbar-container">
                               <div>
-                                        <img class="navbar-logo" src="/Images/Project_Logo-removebg-preview.png" alt="">
+                                        <img class="navbar-logo" src="/main/Images/Project_Logo-removebg-preview.png" alt="">
                               </div>
                               <!-- <div class="logo-container">
                                         <h1 class="logo" onclick="homepage()">AAH Universe</h1>
@@ -38,9 +38,7 @@
                                                   <li class="menu-list-item" onclick="animepage()">Anime
                                                             <!-- <a href="/main/index_anime.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item" onclick="popularpage()">Popular</li>
-                                                  <li class="menu-list-item" onclick="trendpage()">Trends</li>
-
+                                                  
                                         </ul>
                               </div>
                               <div class="search_user">
@@ -65,7 +63,7 @@
                                         </div>
                               </div>
                               <div class="profile-container">
-                                        <img class="profile-picture" alt="" src="/Images/profile-image.png">
+                                        <img class="profile-picture" alt="" src="/main/Images/profile-image.png">
                                         <div class="profile-text-container">
                                                   <span class="profile-text">Profile</span>
                                                   <i class="fa-regular fa-circle-down"></i>
@@ -99,8 +97,9 @@
 
                               <video class="video-file" id="myVideo" controls>
                                         <!-- <source src="/main/Video_playback/bad_boys_ride_or_die.mkv" type="video/mp4"> -->
-                                        <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
+                                        <source src="/content-videos/movies/Code8_Part-2.mp4" type="video/mp4">
                               </video>
+                              
                     </div>
 
                     <div class="video-content-details">
@@ -118,7 +117,9 @@
                                         <div class="movie-details">
                                                   <h5 id="gen">Action | Crime | Sci-Fi</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>
+                                                                      <a href="https://www.imdb.com/title/tt14764464/?ref_=vp_vi_tt_p">IMDB</a>
+                                                            </span><i class="bi bi-star-fill"></i>5.7
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -248,7 +249,7 @@
 
           <div class="endbar">
                     <div class="endbar-socialmedia-icons">
-                              <img src="/Images/Project_Logo-removebg-preview.png" alt="">
+                              <img src="/main/Images/Project_Logo-removebg-preview.png" alt="">
                               <abbr title="Discord">
                                         <i class="fa-brands fa-discord border "></i>
                               </abbr>
