updating through github

--- a/main/index.html
+++ b/main/index.html
@@ -40,8 +40,6 @@
                                                   <li class="menu-list-item" onclick="animepage()">Anime
                                                             <!-- <a href="/main/index_anime.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item">Popular</li>
-                                                  <li class="menu-list-item">Trends</li>
 
                                         </ul>
                               </div>
@@ -49,23 +47,24 @@
                                         <i class="fa-solid fa-magnifying-glass"></i>
                                         <input type="text" placeholder="Search..." id="search_input">
                                         <div class="search">
-                                                  <!-- <a href="" class="card">
+                                                  <a href="" class="card">
                                                             <img src="/content-images/Movies/After-We-Fell.jpg" alt="">
                                                             <div class="cont">
                                                                       <h3>The Boys</h3>
                                                                       <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
                                                             </div>
-                                                  </a> -->
-                                                  <!-- <a href="" class="card">
+                                                  </a>
+                                                  <a href="" class="card">
                                                             <img src="/content-images/Movies/After-We-Fell.jpg" alt="">
                                                             <div class="cont">
                                                                       <h3>The Boys</h3>
                                                                       <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
                                                             </div>
-                                                  </a> -->
+                                                  </a>
 
                                         </div>
                               </div>
+                              
                               <div class="profile-container">
                                         <img class="profile-picture" alt="" src="/main/Images/profile-image.png">
                                         <div class="profile-text-container">
