--- a/main/index_series.html
+++ b/main/index_series.html
@@ -43,20 +43,20 @@
                                         <i class="fa-solid fa-magnifying-glass"></i>
                                         <input type="text" placeholder="Search..." id="search_input">
                                         <div class="search">
-                                                  <!-- <a href="" class="card">
+                                                  <a href="" class="card">
                                                             <img src="/content-images/Movies/After-We-Fell.jpg" alt="">
                                                             <div class="cont">
                                                                       <h3>The Boys</h3>
                                                                       <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
                                                             </div>
-                                                  </a> -->
-                                                  <!-- <a href="" class="card">
+                                                  </a>
+                                                  <a href="" class="card">
                                                             <img src="/content-images/Movies/After-We-Fell.jpg" alt="">
                                                             <div class="cont">
                                                                       <h3>The Boys</h3>
                                                                       <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
                                                             </div>
-                                                  </a> -->
+                                                  </a>
 
                                         </div>
                               </div>
@@ -263,7 +263,7 @@
                                                                                 </p>
                                                                       </h3>
                                                             </div>
-                                                            <button class="featured-button">WATCH
+                                                            <button class="featured-button" onclick="lucifer()">WATCH
                                                                       <i class="bi bi-play-btn"></i>
                                                             </button>
                                                   </div>
@@ -400,7 +400,7 @@
                                                                       </div>
                                                                       <!-- <p class="movie-list-item-desc"></p> -->
                                                                       <button
-                                                                                class="movie-list-item-button">WATCH</button>
+                                                                                class="movie-list-item-button" onclick="shogun()">WATCH</button>
                                                             </div>
 
                                                             <div class="movie-list-item">
