--- a/Login/registration.html
+++ b/Login/registration.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="regi.css">
 
 </head>
-
 <body>
     <!-- <img src="/Images/Project_Logo-removebg-preview.png" height="180px"class="registrationImg"> -->
     <div class="box">
@@ -27,12 +25,11 @@
             <input type="submit" value="Login">
             <div class="links">
                 <a href="/Login/Forgett.html">Forgot Password?</a>
-                <a href="/registration/sf.html">SingUp</a>
+                <a href="/registration/sf.html">SignUp</a>
             </div>
-
+            
 
         </form>
     </div>
 </body>
-
 </html>
