--- a/registration/sf.html
+++ b/registration/sf.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <link rel="stylesheet" href="fs.css">
+    <script src="validation.js" defer></script>
 </head>
-
 <body>
-    <!-- <video autoplay muted loop id="myVideo">
-        <source src="/registration/background_video.mp4" type="video/mp4">
-    </video> -->
-
     <div class="box">
-        <form>
+        <form action="connect.php" method="post">
             <h2>Registration</h2>
             <div class="inputBox">
                 <input type="text" id="fullname" name="fullname" required>
@@ -41,11 +36,6 @@
                 <span>Password</span>
                 <i></i>
             </div>
-            <div class="inputBox">
-                <input type="password" id="confirm-password" name="confirm-password" required>
-                <span>Confirm Password</span>
-                <i></i>
-            </div>
             <div class="gender-group">
                 <label>Gender</label>
                 <input type="radio" id="male" name="gender" value="male">
@@ -57,5 +47,4 @@
         </form>
     </div>
 </body>
-
 </html>
