--- a/registration/sf.html
+++ b/registration/sf.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,11 @@
     <link rel="stylesheet" href="fs.css">
     <script src="validation.js" defer></script>
 </head>
+
 <body>
     <div class="box">
         <form action="connect.php" method="post">
-            <h2>Registration</h2>
+            <h2>Sign Up</h2>
             <div class="inputBox">
                 <input type="text" id="fullname" name="fullname" required>
                 <span>Full Name</span>
@@ -47,4 +49,5 @@
         </form>
     </div>
 </body>
+
 </html>
