changing cast images

--- a/main/Video_playback/movies/bad_boys_ride_or_die.html
+++ b/main/Video_playback/movies/bad_boys_ride_or_die.html
@@ -131,7 +131,7 @@
         <div class="castmembers-director">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/adil-el-arbi.jpg" alt="">
                     <span>
                         <h4>Adil El Arbi</h4>
                         <h2>Director | Producer | Writer</h2>
@@ -141,7 +141,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Bilall-Fallah.jpg" alt="">
                     <span>
                         <h4>Bilall Fallah</h4>
                         <h2>Director | Actor | Producer</h2>
@@ -167,7 +167,7 @@
         <div class="castmembers-writers">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Chris-Bremner.jpg" alt="">
                     <span>
                         <h4>Chris Bremner</h4>
                         <h2>Writer | Actor | Producer</h2>
@@ -177,7 +177,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Will-Beall.jpg" alt="">
                     <span>
                         <h4>Will Beall</h4>
                         <h2>Writer | Additional Crew | Producer</h2>
@@ -187,7 +187,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/George-Gallo.jpg" alt="">
                     <span>
                         <h4>George Gallo</h4>
                         <h2>Writer | Producer</h2>
@@ -204,15 +204,15 @@
         <div class="castmembers-cast">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Will-Smith.jpg" alt="">
                     <span>
-                        <h4>will Smith</h4>
+                        <h4>Will Smith</h4>
                         <h2>As Mike Lowrey</h2>
                     </span>
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Martin-Lawrence.jpg" alt="">
                     <span>
                         <h4>Martin Lawrence</h4>
                         <h2>As Marcus Burnett</h2>
@@ -223,7 +223,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Vanessa-Hudgens.jpg" alt="">
                     <span>
                         <h4>Vanessa Hudgens</h4>
                         <h2>As Kelly</h2>
@@ -231,7 +231,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Alexander-Ludwig.jpg" alt="">
                     <span>
                         <h4>Alexander Ludwig</h4>
                         <h2>As Dorn</h2>
@@ -241,7 +241,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Paola-Núñez.jpg" alt="">
                     <span>
                         <h4>Paola Núñez</h4>
                         <h2>As Rita(as Paola Nuñez)</h2>
