--- a/main/Video_playback/movies/harrypotter2.html
+++ b/main/Video_playback/movies/harrypotter2.html
@@ -132,7 +132,7 @@
         </div>
         <div class="castmembers-director">
             <div class="castmembers-details">
-                <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                <img src="/content-images/Cast-Members/Chris-Columbus.jpg" alt="">
                 <span>
                     <h4>Chris Columbus</h4>
                     <h2>Director | Writer | Producer</h2>
@@ -146,7 +146,7 @@
         <div class="castmembers-writers">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Steve-Kloves.jpg" alt="">
                     <span>
                         <h4>Steve Kloves</h4>
                         <h2>Writer | Director | Producer</h2>
@@ -156,7 +156,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/J.K.-Rowling.jpg" alt="">
                     <span>
                         <h4>J.K. Rowling</h4>
                         <h2>Writer | Producer | Additional Crew</h2>
@@ -184,7 +184,7 @@
         <div class="castmembers-cast">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Daniel-Radcliffe.jpg" alt="">
                     <span>
                         <h4>Daniel Radcliffe</h4>
                         <h2>As Harry Potter</h2>
@@ -192,7 +192,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Rupert-Grint.jpg" alt="">
                     <span>
                         <h4>Rupert Grint</h4>
                         <h2>As Ron Weasley</h2>
@@ -200,7 +200,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Richard-Harris.jpg" alt="">
                     <span>
                         <h4>Richard Harris</h4>
                         <h2>As Albus Dumbledore</h2>
@@ -211,7 +211,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Emma-Watson.jpg" alt="">
                     <span>
                         <h4>Emma Watson</h4>
                         <h2>As Hermione Granger</h2>
@@ -219,7 +219,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Toby-Jones.jpg" alt="">
                     <span>
                         <h4>Toby Jones</h4>
                         <h2>As Dobby(voice)</h2>
@@ -227,7 +227,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Maggie-Smith.jpg" alt="">
                     <span>
                         <h4>Maggie Smith</h4>
                         <h2>As Professor Minerva McGonagall</h2>
@@ -237,7 +237,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Alan-Rickman.jpg" alt="">
                     <span>
                         <h4>Alan Rickman</h4>
                         <h2>As Professor Severus Snape</h2>
@@ -245,7 +245,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Robbie-Coltrane.jpg" alt="">
                     <span>
                         <h4>Robbie Coltrane</h4>
                         <h2>As Rubeus Hagrid</h2>
@@ -253,7 +253,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Bonnie-Wright.jpg" alt="">
                     <span>
                         <h4>Bonnie Wrights</h4>
                         <h2>As Ginny Weasley</h2>
